[gd_scene load_steps=5 format=3 uid="uid://c6wmqp0buuk5m"]

[ext_resource type="Texture2D" uid="uid://bulteu43r2r6a" path="res://gfx/crosshair.png" id="1_blv8c"]
[ext_resource type="Script" path="res://scenes/playerGUI.gd" id="1_r6s6h"]
[ext_resource type="Script" path="res://scenes/pause_node.gd" id="3_81wm1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qlrfn"]
bg_color = Color(0.2484, 0.2484, 0.2484, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="PlayerGUI" type="CanvasLayer"]
script = ExtResource("1_r6s6h")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_blv8c")
expand_mode = 1

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = -134.0
offset_top = 12.0
offset_right = 145.0
offset_bottom = 35.0
horizontal_alignment = 1

[node name="PauseNode" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 649.0
script = ExtResource("3_81wm1")

[node name="ColorRect" type="ColorRect" parent="PauseNode"]
layout_mode = 0
offset_right = 1161.0
offset_bottom = 655.0
color = Color(0, 0, 0, 0.52549)

[node name="Settings" type="Panel" parent="PauseNode"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -128.0
offset_right = 109.5
offset_bottom = 123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_qlrfn")

[node name="Label" type="Label" parent="PauseNode/Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 6.0
offset_right = 31.0
offset_bottom = 29.0
grow_horizontal = 2
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="PauseNode/Settings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_top = 30.0
offset_right = 107.0
offset_bottom = 34.0
grow_horizontal = 2

[node name="OptionButton" type="OptionButton" parent="PauseNode/Settings"]
layout_mode = 0
offset_left = 115.0
offset_top = 37.5
offset_right = 214.0
offset_bottom = 63.5
theme_override_font_sizes/font_size = 13
selected = 2
item_count = 4
popup/item_0/text = "1920x1080"
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1152x648"
popup/item_2/id = 2
popup/item_3/text = "640x360"
popup/item_3/id = 3

[node name="Label" type="Label" parent="PauseNode/Settings/OptionButton"]
layout_mode = 0
offset_left = -109.0
offset_top = 2.0
offset_right = -26.0
offset_bottom = 25.0
text = "Resolution"

[node name="CheckBox" type="CheckBox" parent="PauseNode/Settings"]
layout_mode = 0
offset_left = 192.0
offset_top = 72.5
offset_right = 216.0
offset_bottom = 96.5

[node name="Label" type="Label" parent="PauseNode/Settings/CheckBox"]
layout_mode = 0
offset_left = -186.0
offset_top = -1.0
offset_right = -103.0
offset_bottom = 22.0
text = "Fullscreen"

[node name="CheckBox2" type="CheckBox" parent="PauseNode/Settings"]
layout_mode = 0
offset_left = 192.0
offset_top = 103.5
offset_right = 216.0
offset_bottom = 127.5

[node name="Label" type="Label" parent="PauseNode/Settings/CheckBox2"]
layout_mode = 0
offset_left = -186.0
offset_top = -1.0
offset_right = -103.0
offset_bottom = 22.0
text = "VSync"

[node name="Button" type="Button" parent="PauseNode/Settings"]
layout_mode = 0
offset_left = 5.0
offset_top = 213.0
offset_right = 217.0
offset_bottom = 246.0
text = "Apply"

[node name="Button2" type="Button" parent="PauseNode/Settings"]
layout_mode = 0
offset_left = 194.0
offset_top = 2.5
offset_right = 219.0
offset_bottom = 30.5
theme_override_font_sizes/font_size = 14
text = "X"

[node name="Main" type="Control" parent="PauseNode"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="PauseNode/Main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 11.0
offset_top = 187.0
offset_right = 305.0
offset_bottom = 245.0
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "GAME PAUSED"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseNode/Main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 250.0
offset_right = 248.0
offset_bottom = 386.0
grow_vertical = 2

[node name="Button" type="Button" parent="PauseNode/Main/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="Button2" type="Button" parent="PauseNode/Main/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Button3" type="Button" parent="PauseNode/Main/VBoxContainer"]
layout_mode = 2
text = "Exit to menu"

[node name="Button4" type="Button" parent="PauseNode/Main/VBoxContainer"]
layout_mode = 2
text = "Exit to desktop"

[node name="DebugInfoLabel" type="Label" parent="."]
visible = false
offset_right = 185.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 18
text = "hi"

[connection signal="pressed" from="PauseNode/Settings/Button" to="PauseNode" method="_on_apply_settings"]
[connection signal="pressed" from="PauseNode/Settings/Button2" to="PauseNode" method="_on_close_button"]
[connection signal="pressed" from="PauseNode/Main/VBoxContainer/Button" to="PauseNode" method="_unpause"]
[connection signal="pressed" from="PauseNode/Main/VBoxContainer/Button2" to="PauseNode" method="_settings"]
[connection signal="pressed" from="PauseNode/Main/VBoxContainer/Button3" to="PauseNode" method="_quit"]
[connection signal="pressed" from="PauseNode/Main/VBoxContainer/Button4" to="PauseNode" method="_actually_quit"]
